--- a/public_key_cryptography_project/templates/auth/decrypte_code.html
+++ b/public_key_cryptography_project/templates/auth/decrypte_code.html
@@ -6,7 +6,10 @@
 
 {% block content %}
 <form method="post">
-  <input name="ciphertext" id="ciphertext" required>
+  <input name="ciphertext" id="ciphertext" required><br>
   <input type="submit" value="解密"><br>
+</form>
+<form name="input" action="http://127.0.0.1:5000/index/" method="get">
+<input type="submit" value="返回主页"><br>
 </form>
 {% endblock %}
